k8s/airflow-cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: airflow-cli
  name: airflow-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow-cli
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/local-airflow-default: "true"
        io.kompose.service: airflow-cli
    spec:
      containers:
        - args:
            - bash
            - -c
            - airflow
          image: airflow-cli
          name: airflow-cli
          resources: {}
          volumeMounts:
            - mountPath: /opt/airflow/dags
              name: airflow-cli-claim0
            - mountPath: /opt/airflow/logs
              name: airflow-cli-claim1
            - mountPath: /opt/airflow/plugins
              name: airflow-cli-claim2
      restartPolicy: Always
      volumes:
        - name: airflow-cli-claim0
          persistentVolumeClaim:
            claimName: airflow-cli-claim0
        - name: airflow-cli-claim1
          persistentVolumeClaim:
            claimName: airflow-cli-claim1
        - name: airflow-cli-claim2
          persistentVolumeClaim:
            claimName: airflow-cli-claim2
status: {}
