k8s/airflow-init-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: airflow-init
  name: airflow-init
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow-init
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/local-airflow-default: "true"
        io.kompose.service: airflow-init
    spec:
      containers:
        - args:
            - -c
            - |
              [...]
          command:
            - /bin/bash
          image: airflow-init
          name: airflow-init
          resources: {}
          volumeMounts:
            - mountPath: /sources
              name: airflow-init-claim0
      restartPolicy: Always
      volumes:
        - name: airflow-init-claim0
          persistentVolumeClaim:
            claimName: airflow-init-claim0
status: {}
