k8s/airflow-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: airflow-scheduler
  name: airflow-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow-scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/local-airflow-default: "true"
        io.kompose.service: airflow-scheduler
    spec:
      containers:
        - args:
            - scheduler
          image: airflow-scheduler
          livenessProbe:
            exec:
              command:
                - airflow jobs check --job-type SchedulerJob --hostname "$${HOSTNAME}"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: airflow-scheduler
          resources: {}
          volumeMounts:
            - mountPath: /opt/airflow/dags
              name: airflow-scheduler-claim0
            - mountPath: /opt/airflow/logs
              name: airflow-scheduler-claim1
            - mountPath: /opt/airflow/plugins
              name: airflow-scheduler-claim2
      restartPolicy: Always
      volumes:
        - name: airflow-scheduler-claim0
          persistentVolumeClaim:
            claimName: airflow-scheduler-claim0
        - name: airflow-scheduler-claim1
          persistentVolumeClaim:
            claimName: airflow-scheduler-claim1
        - name: airflow-scheduler-claim2
          persistentVolumeClaim:
            claimName: airflow-scheduler-claim2
status: {}
