k8s/airflow-webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: airflow-webserver
  name: airflow-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow-webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/local-airflow-default: "true"
        io.kompose.service: airflow-webserver
    spec:
      containers:
        - args:
            - webserver
          image: airflow-webserver
          livenessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://localhost:8080/health
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: airflow-webserver
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /opt/airflow/dags
              name: airflow-webserver-claim0
            - mountPath: /opt/airflow/logs
              name: airflow-webserver-claim1
            - mountPath: /opt/airflow/plugins
              name: airflow-webserver-claim2
      restartPolicy: Always
      volumes:
        - name: airflow-webserver-claim0
          persistentVolumeClaim:
            claimName: airflow-webserver-claim0
        - name: airflow-webserver-claim1
          persistentVolumeClaim:
            claimName: airflow-webserver-claim1
        - name: airflow-webserver-claim2
          persistentVolumeClaim:
            claimName: airflow-webserver-claim2
status: {}
