k8s/airflow-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: airflow-worker
  name: airflow-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow-worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/local-airflow-default: "true"
        io.kompose.service: airflow-worker
    spec:
      containers:
        - args:
            - celery
            - worker
          image: airflow-worker
          livenessProbe:
            exec:
              command:
                - celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: airflow-worker
          resources: {}
          volumeMounts:
            - mountPath: /opt/airflow/dags
              name: airflow-worker-claim0
            - mountPath: /opt/airflow/logs
              name: airflow-worker-claim1
            - mountPath: /opt/airflow/plugins
              name: airflow-worker-claim2
      restartPolicy: Always
      volumes:
        - name: airflow-worker-claim0
          persistentVolumeClaim:
            claimName: airflow-worker-claim0
        - name: airflow-worker-claim1
          persistentVolumeClaim:
            claimName: airflow-worker-claim1
        - name: airflow-worker-claim2
          persistentVolumeClaim:
            claimName: airflow-worker-claim2
status: {}
