k8s/flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: flower
  name: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flower
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/local-airflow-default: "true"
        io.kompose.service: flower
    spec:
      containers:
        - args:
            - celery
            - flower
          image: flower
          livenessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://localhost:5555/
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: flower
          ports:
            - containerPort: 5555
          resources: {}
          volumeMounts:
            - mountPath: /opt/airflow/dags
              name: flower-claim0
            - mountPath: /opt/airflow/logs
              name: flower-claim1
            - mountPath: /opt/airflow/plugins
              name: flower-claim2
      restartPolicy: Always
      volumes:
        - name: flower-claim0
          persistentVolumeClaim:
            claimName: flower-claim0
        - name: flower-claim1
          persistentVolumeClaim:
            claimName: flower-claim1
        - name: flower-claim2
          persistentVolumeClaim:
            claimName: flower-claim2
status: {}
