k8s/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: flower
  name: flower
spec:
  ports:
    - name: "5555"
      port: 5555
      targetPort: 5555
  selector:
    io.kompose.service: flower
status:
  loadBalancer: {}
